--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\ProdutoModel.cs" />
     <Compile Include="Models\VendaModel.cs" />
     <Compile Include="ProdutoBusiness.cs" />
