--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -43,7 +43,10 @@
   <ItemGroup>
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\ProdutoModel.cs" />
+    <Compile Include="Models\RankingModel.cs" />
+    <Compile Include="Models\RankingViewModel.cs" />
     <Compile Include="Models\VendaModel.cs" />
+    <Compile Include="Models\VendaViewModel.cs" />
     <Compile Include="ProdutoBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendaBusiness.cs" />
