--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -16,6 +16,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <globalization uiCulture="pt-BR" culture="pt-BR"/>
   </system.web>
   <system.webServer>
     <handlers>
