--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="PathProduto" value="D:/SMN/produtos.txt"/>
+    <add key="PathVendas" value="D:/SMN/vendas.txt"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
